Fix text alignment for row header cells

--- a/packages/terra-worklist-data-grid/src/subcomponents/Cell.module.scss
+++ b/packages/terra-worklist-data-grid/src/subcomponents/Cell.module.scss
@@ -30,6 +30,7 @@
   .cell-content {
     overflow: hidden;
     overflow-wrap: break-word;
+    text-align: left;
   }
 
   .pinned {
